ref: Here is a suitable commit message based on your unstaged changes:
Refactor config and database structure, update services and controllers, and improve documentation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Application
 APP_NAME=your-app-name
 APP_PORT=3000
+LOG_LEVEL='' #'fatal', 'info', 'error', 'debug' etc
 NODE_ENV=development
 
 # Database (Sequelize/Postgres)
