--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-    'config': path.resolve('src/infrastructure/config/db.cts'),
-    'models-path': path.resolve('src/infrastructure/database/models'),
-    'seeders-path': path.resolve('src/infrastructure/database/seeders'),
-    'migrations-path': path.resolve('src/infrastructure/database/migrations'),
+    'config': path.resolve('dist/infrastructure/config/db.js'),
+    'models-path': path.resolve('dist/infrastructure/database/models'),
+    'seeders-path': path.resolve('dist/infrastructure/database/seeders'),
+    'migrations-path': path.resolve('dist/infrastructure/database/migrations'),
 };
