feat: added eslint and deployment files

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm test
       - name: Build
         run: npm run build
+      - name: Run migrations
+        run: npm run dev:migrate
 
   deploy:
     needs: build-test
