--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run migrations
         run: npm run migrate
       - name: Start Application
-        run: npm start
+        run: npm run pm2-start
 
   deploy:
     needs: build-test
