--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "qa": "NODE_ENV=testing node --experimental-transform-types --env-file=./.env.test src/server.ts",
     "staging": "NODE_ENV=staging node --experimental-transform-types --env-file=./.env.staging src/server.ts",
     "start": "NODE_ENV=production node --experimental-transform-types --env-file=./.env.production src/server.ts",
-    "pm2-start": "pm2-runtime start ecosystem.config.js --env production",
+    "pm2-start": "pm2-runtime start ecosystem.config.cjs --env production",
     "test": "jest",
     "dev:migrate": "NODE_ENV=development node --env-file=./.env.development --experimental-vm-modules ./node_modules/.bin/sequelize-cli db:migrate --config dist/infrastructure/config/db.js",
     "migrate": "NODE_ENV=production node --env-file=./.env.production --experimental-vm-modules ./node_modules/.bin/sequelize-cli db:migrate --config dist/infrastructure/config/db.js"
