--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "type": "git",
     "url": "git+https://github.com/paullaster/aiqedge-smtp.git"
   },
-  "keywords": ["node", "typescript", "smtp", "clean-architecture"],
+  "keywords": [
+    "node",
+    "typescript",
+    "smtp",
+    "clean-architecture"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
@@ -32,6 +37,7 @@
     "pg-hstore": "^2.3.4",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "pino-roll": "^3.1.0",
     "prom-client": "^15.1.3",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6"
