--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bullmq": "^5.52.2",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
+    "joi": "^17.13.3",
     "mime-types": "^3.0.1",
     "nodemailer": "^7.0.3",
     "pg": "^8.15.6",
@@ -48,6 +49,7 @@
     "@eslint/js": "^9.26.0",
     "@types/express": "^5.0.1",
     "@types/jest": "^27.0.2",
+    "@types/joi": "^17.2.2",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.15.17",
     "@types/nodemailer": "^6.4.17",
